<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <!-- Título -->
    <TextView
        android:id="@+id/title_create_album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create Album"
        android:textAppearance="?attr/textAppearanceHeadline5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Nombre del álbum -->
    <EditText
        android:id="@+id/input_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Name"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/title_create_album"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <!-- URL de la portada -->
    <EditText
        android:id="@+id/input_cover"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Cover URL"
        android:inputType="textUri"
        app:layout_constraintTop_toBottomOf="@id/input_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <!-- Fecha de lanzamiento -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_release_date_picker"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/input_cover"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <EditText
            android:id="@+id/input_release_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:clickable="true"
            android:inputType="none"
            android:hint="Release Date " />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Descripción -->
    <EditText
        android:id="@+id/input_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Description"
        android:inputType="textMultiLine"
        android:lines="4"
        app:layout_constraintTop_toBottomOf="@id/input_release_date_picker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <!-- Género -->
    <EditText
        android:id="@+id/input_genre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Genre"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/input_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <!-- Discográfica -->
    <EditText
        android:id="@+id/input_record_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Record Label"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/input_genre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <!-- Botón para enviar -->
    <Button
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit"
        app:layout_constraintTop_toBottomOf="@id/input_record_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
