...
            android:layout_height="wrap_content"
            android:textSize="22dp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/albumTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            />

        <TextView
...
            android:id="@+id/albumRelease"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            />
        <Button
            android:id="@+id/button_get_track"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Get Track" />
        <TextView
            android:id="@+id/tracksLabel"
...
